[css-grid] Properly align items next to collapsed tracks with gutters

GridAreaPositionForInFlowChild could return a wrong end position for
grid items adjacent to a collapsed track, because it didn't take into
account that gutters collapse in that case. Therefore, "center" or
"end" alignments displayed the item at the wrong position.

BUG=801881

TEST=external/wpt/css/css-grid/alignment/grid-gutters-013.html

Change-Id: I8223f102e3fd581ab0a2d6f23d18c188e23807c7
Reviewed-on: https://chromium-review.googlesource.com/1245727
Reviewed-by: Javier Fernandez <jfernandez@igalia.com>
Reviewed-by: Sergio Villar <svillar@igalia.com>
Reviewed-by: Manuel Rego <rego@igalia.com>
Commit-Queue: Javier Fernandez <jfernandez@igalia.com>
Cr-Commit-Position: refs/heads/master@{#595045}
Former-commit-id: be21183bfc8dc2101a599b5cbcc9aaa0faac0bc6